# GReS

./: .gitattributes  .gitignore  .gitignore.swp  .gitmodules  .readthedocs.yaml  GRS.py  README.md  TODO  Thumbs.db  compileAll.m  github_token.txt  initGRES.m  initGReS.m  runUnitTests.m
.github/workflows/: main.yml
1_test_tetra_elas/: A_main_test.m  Elements.m  Materials.m  Tetra_TEST.txt  mesh.msh  txt_to_msh.m
Code/: README.md
Code/@linearSolver/: .Solve.m.swp  Solve.m  (+4 more)
Docs/: pyproject.toml
Tests/: .gitignore  CheckTests.m  runAllTests.m
Tests_Develop/: benchamrks
ThirdPartyLibs/: aspAMG_matlab
ThirdPartyLibs/VTKreader/: CMakeLists.txt  compile.m
Tutorial/: quickStart.mlx
Utilities/: Logger.m  gres_log.m  gres_mex.m  gres_root.m  plotFunction.m  runGReS.m
assembly/: assemblyBC.m  assemblyK.m
boundaries/: Boundaries.m  Dirichlet.m  NodeBC.m  testBoundaries.m
docs/: conf.py  index.rst  requirements.txt
elements/: Tetrahedron.m  testElements.m
materials/: Elastic.m  Fluid.m  HypoElastic.m  HypoPlastic.m  Materials.m  ModCamClay.m  PorousRock.m  TransvElastic.m  testMaterials.m
mesh_cpp/: testMesh.m
read/: Makefile  Material.m  Mesh.m  matINPUT.mat  readMaterial.m  test.m  testmaterial.m
test_12T_assembly/: Boundaries.m  Elements.m  NodeBC.m  Test_12TETRA.m  Tetrahedron.m  assembly.m
test_2H_assembly/: 2Hexa.txt  Elements.m  Hexahedron.m  MAIN_2H.m  mesh.msh  prova.m  txt_to_msh.m
test_75H_assembly/: 75Hexa_Mesh.txt  Hexa_TEST.txt  Hexahedron.m  MAIN_75H.m  mesh.msh  txt_to_msh.m
upscaling/: averages.txt  build_voigt_rotation_matrix.m  check_drucker_prager.m  config.xml  createMat.m  fitCurve.m  generate_truncated_random_numbers.m  get_stiffness.m  joint_compliance.m  main.m  plotPQ.m  preprocess.m  rotation_matrix.m  set_parameters.m  simulate.m  solvePQ.m  transform_joint_compliance.m
write/: VTKOutput.m  main.m  mxVTKWriter.cpp  mxVTKWriter.mexw64
(+3862 files in other folders)
